Implementar el codigo para la generacion del qr, y para que al leerlo se pueda acceder a la informacion.